--- a/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
+++ b/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__table-component">
   <div class="entity-view__table-component__header">
-    <div class="entity-view__table-component__header__title">Campaigns</div>
+    <div class="entity-view__table-component__header__title">{{'PRODUCT_CAMPAIGN_TITLE' | translate}}</div>
     <md-input class="entity-view__table-component__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
     <table-pagination
       [limit]="limit"
@@ -11,13 +11,12 @@
       (next)="next()"
       (updateLimit)="updateLimit($event)">
     </table-pagination>
-    <!--<md-icon class="entity-view__table-component__header__action">more_vert</md-icon>-->
   </div>
   <table class="highlight table__custom">
     <thead>
     <tr>
       <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
-        {{params.label}}
+        {{params.label | translate}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
       <th></th>
@@ -30,7 +29,7 @@
       <td>
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
-          <button md-menu-item [routerLink]="['/campaigns', entity.id]">View Campaign</button>
+          <button md-menu-item [routerLink]="['/campaigns', entity.id]">{{'PRODUCT_CAMPAIGN_VIEW' | translate}}</button>
         </md-menu>
       </td>
     </tr>
@@ -39,7 +38,7 @@
 
   <table-loader *ngIf="loadingData && (!entities || entities.length === 0)"></table-loader>
 
-  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No campaigns found</div>
+  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">{{'PRODUCT_CAMPAIGN_NODATA' | translate}}</div>
 
   <table-pagination
     [limit]="limit"
