--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
@@ -1,17 +1,17 @@
 <div *ngIf="entity" class="entity-view__card" [class.product-schedule-add--center]="mode === add" [class.entity-view__card--create]="mode === add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{mode === add ? 'Create New Product Schedule' : 'Product Schedule Details'}}</div>
+    <div class="entity-view__card__header__title">{{(mode === add ? 'PRODUCTSCHEDULE_INFO_CREATETITLE' : 'PRODUCTSCHEDULE_INFO_TITLE') | translate}}</div>
     <ng-container *ngIf="mode === view">
       <md-icon [md-menu-trigger-for]="shipOptions">more_vert</md-icon>
       <md-menu #shipOptions="mdMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(update);"> Edit Product Schedule </button>
+        <button md-menu-item (click)="changeMode.emit(update);">{{'PRODUCTSCHEDULE_INFO_EDIT' | translate}}</button>
       </md-menu>
     </ng-container>
   </div>
 
   <form #productScheduleInputForm="ngForm" style="font-size: 14px;" class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name">
-      <input [disabled]="mode === view" required md-input placeholder="Product Schedule Name" name="name" [(ngModel)]="entity.name" type="text">
+      <input [disabled]="mode === view" required md-input placeholder="{{'PRODUCTSCHEDULE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </md-input-container>
 
     <autocomplete-input class="default-autocomplete-input--full-width"
@@ -20,14 +20,14 @@
                         [mapFunction]="loadBalancerMapper"
                         [initialValue]="entity.loadBalancer"
                         [options]="loadBalancerService.entities$ | async"
-                        [placeholder]="'Load Balancer'"
+                        [placeholder]="'PRODUCTSCHEDULE_INFO_LOADBALANCER' | translate"
                         [required]="true"
                         (selected)="entity.loadBalancer = $event">
     </autocomplete-input>
   </form>
 
   <div *ngIf="mode !== view" class="entity-view__card__actions product-schedule-view__details__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveSchedule(productScheduleInputForm.form.valid)">SAVE</div>
+    <div (click)="cancel.emit(true)">{{'PRODUCTSCHEDULE_INFO_CANCEL' | translate}}</div>
+    <div (click)="saveSchedule(productScheduleInputForm.form.valid)">{{'PRODUCTSCHEDULE_INFO_SAVE' | translate}}</div>
   </div>
 </div>
