--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">Product Schedule</div>
+  <div class="entity-view__title">{{'PRODUCTSCHEDULE_TITLE' | translate}}</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -9,7 +9,7 @@
         <img src="/assets/images/result-item-transaction-white.svg" alt="">
       </div>
       <div class="entity-view__info__data">
-        <div class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
+        <div class="entity-view__info__data__date">{{'SINGLEPAGE_CREATED' | translate}}: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
         <div class="entity-view__info__data__name">
           {{entity.name}}
         </div>
@@ -23,8 +23,8 @@
     </div>
 
     <div class="entity-view__navigation">
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
-      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">CAMPAIGNS</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">{{'PRODUCTSCHEDULE_TAB_GENERAL' | translate}}</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">{{'PRODUCTSCHEDULE_TAB_CAMPAIGN' | translate}}</span>
     </div>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -70,7 +70,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [title]="'ProductSchedule'" [cardsExpression]="'300px;l'"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [title]="'PRODUCTSCHEDULE_TITLE' | translate" [cardsExpression]="'300px;l'"></spe-loader>
 </ng-template>
 
 
