--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -392,6 +392,7 @@ $blue-color: #4A90E2;
 
       &__title {
         display: flex;
+        margin-right: 15px;
         margin-bottom: 0;
         color: #5B9BE1;
         font-size: 18px;
