--- a/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
@@ -1,31 +1,31 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add" [style.margin]="mode === modes.Add ? 'auto' : '10px'">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create New Campaign' : 'Campaign General Details'}}</div>
+    <div class="entity-view__card__header__title">{{(mode === modes.Add ? 'CAMPAIGN_INFO_CREATETITLE' : 'CAMPAIGN_INFO_TITLE') | translate}}</div>
     <ng-container *ngIf="mode !== modes.Add">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
-        <button md-menu-item (click)="changeMode.emit(modes.Update)"> Edit Campaign</button>
+        <button md-menu-item (click)="changeMode.emit(modes.Update)"> {{'CAMPAIGN_INFO_EDIT' | translate}} </button>
       </md-menu>
     </ng-container>
   </div>
 
   <div class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input required md-input [disabled]="mode === modes.View" placeholder="Campaign Name" [(ngModel)]="entity.name" type="text">
+      <input required md-input [disabled]="mode === modes.View" placeholder=" {{'CAMPAIGN_INFO_NAME' | translate}} " [(ngModel)]="entity.name" type="text">
     </md-input-container>
     <div class="flex-custom flex-custom--center prepaid-checkbox">
-      <span>Allow Prepaid</span>
+      <span> {{'CAMPAIGN_INFO_ALLOWPREPAID' | translate}} </span>
       <md-checkbox class="flex-align--right" [disabled]="mode === modes.View" [(ngModel)]="entity.allowPrepaid"></md-checkbox>
     </div>
     <div class="flex-custom flex-custom--center prepaid-checkbox">
-      <span>Show Prepaid</span>
+      <span> {{'CAMPAIGN_INFO_SHOWPREPAID' | translate}} </span>
       <md-checkbox class="flex-align--right" [disabled]="mode === modes.View" [(ngModel)]="entity.showPrepaid"></md-checkbox>
     </div>
   </div>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">CANCEL</div>
-    <div (click)="saveCampaign()">SAVE</div>
+    <div (click)="cancel.emit(true)"> {{'CAMPAIGN_INFO_CANCEL' | translate}} </div>
+    <div (click)="saveCampaign()"> {{'CAMPAIGN_INFO_SAVE' | translate}} </div>
   </div>
 </div>
 
